# DocAnalyzer

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  documents.py  health.py
backend/app/auth/: dependencies.py  security.py
backend/app/config/: settings.py
backend/app/core/: logging_config.py
backend/app/database/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/rag/cleaners/: cleaners.py
backend/app/services/rag/embeddings/: embeddings.py
backend/app/services/rag/llm/: llm_service.py
backend/app/services/rag/loaders/: loaders.py
backend/app/services/rag/pipeline/: rag_pipeline.py  worker.py
backend/app/services/rag/prompts/: __init__.py  conversation.py  qa.py  system.py
backend/app/services/rag/retrievers/: retrievers.py
backend/app/services/rag/splitters/: splitters.py
backend/app/services/rag/vectorstore/: vectorstore.py
backend/app/services/storage/: storage_service.py
backend/app/tests/: conftest.py  test_auth.py  test_rag.py
backend/scratch/: check_db.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/services/: api.ts
frontend/src/views/: Dashboard.tsx  Login.tsx  Register.tsx
