[project]
name = "rag-document-qa-backend"
version = "0.1.0"
description = "Production-ready multi-user RAG Document Q&A System Backend"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008", # Do not perform function calls in argument defaults (fastapi depends on this for Depends)
    "UP007", # Use `X | Y` for type hints (supports older python style compat if needed, though we support 3.12+)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "jose.*",
    "passlib.*",
    "pypdf.*",
    "docx.*",
    "chromadb.*",
    "sentence_transformers.*",
    "langchain_textsplitters.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "app/tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
